--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -1,6 +1,7 @@
 @use "../partials/colors" as *;
 
 .about {
+  overflow-x: auto;
   .info {
     display: flex;
     flex-direction: column;
